# lsps-for-llms

./: .gitignore  PAPER.md  README.md  REPORT.md  WRITEUP.md  audit.py  bibliography.md  conftest.py  experiment_plan.md  log.md  pyproject.toml  requirements.txt
configs/: README.md
docs/: real_repo_experiment_plan.md  real_repo_progress.md
eval/: README.md
evidence/: claim_ledger.md  manifest.json  protocols.md
harness/: README.md  TASKENV.md  __init__.py  batched_stream_decode.py  single_stream_eval.py  swegym_loader.py  task_env.py
lsp/: INLINE_DELIVERY.md  README.md  delivery_b.py  delivery_base.py  delivery_c.py  delivery_d.py  g4_audit.py  g4_fixtures.py  payload.py  pyrefly_client.py
runs/: README.md
scaffold/: README.md  mock_env.py  stream_agent.py
scripts/: README.md  agent_acd.py  agent_swe.py  api_agent.py  build_manifest.py  d_agent_plumbing.py  d_agent_smoke.py  d_canary.py  d_capability_eval.py  d_diaguse.py  d_format_check.py  d_gen_sft_data.py  d_pilot.py  d_realtask.py  d_sft.py  d_splice_prototype.py  g1_batched_validate.py  g1_dryrun.py  g1_fairness_probe.py  g1_probe_common.py  g1_probe_tune.py  g1_run.py  g1_sanity_health.py  g1_stream_driving_check.py  g3_causal_validity.py  g4_payload_audit.py  g5_pyrefly_partial_file.py  g6_batched_extrapolate.py  g6_batched_summary.py  g6_batched_sweep.py  g6_extrapolate.py  g6_microbench_layer.py  g6_phase_a_baseline.py  g6_phase_a_compile.py  g6_phase_a_profile.py  g6_phase_a_silence_fix.py  g6_phase_b_baseline.py  g6_phase_b_extrapolate.py  g6_phase_b_identity.py  g6_phase_b_run_all.py  (+59 more)
(+139 files in other folders)
